feat: sync latest frontend and backend updates