@@ -2,83 +2,78 @@ package com.safardrop.safardrop.service;
 
 import com.safardrop.safardrop.dto.TripDTO;
 import com.safardrop.safardrop.entity.Trip;
+import com.safardrop.safardrop.entity.User;
+import com.safardrop.safardrop.entity.UserRole;
+import com.safardrop.safardrop.exception.ResourceNotFoundException;
 import com.safardrop.safardrop.repository.TripRepository;
-
+import com.safardrop.safardrop.repository.UserRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
 @Service
 public class TripService {
 
-    private final TripRepository tripRepo;
+    private final TripRepository tripRepository;
+    private final UserRepository userRepository;
 
-    public TripService(TripRepository tripRepo) {
-        this.tripRepo = tripRepo;
+    public TripService(TripRepository tripRepository, UserRepository userRepository) {
+        this.tripRepository = tripRepository;
+        this.userRepository = userRepository;
     }
 
-    // Convert entity to DTO
-    private TripDTO toDTO(Trip trip) {
-        return new TripDTO(
-                trip.getTripId(),
-                trip.getUserId(),
-                trip.getPickupLocation(),   // ✅ FIXED
-                trip.getDropLocation(),     // ✅ FIXED
-                trip.getCreatedAt(),        // ✅ FIXED
-                trip.getTripStatus()        // ✅ FIXED
-        );
-    }
-
-    // Get all trips
     public List<TripDTO> getAllTrips() {
-        return tripRepo.findAll()
+        return tripRepository.findAll().stream().map(this::toDto).toList();
+    }
+
+    public List<TripDTO> searchTrips(String origin, String destination) {
+        return tripRepository.findByOriginAndDestination(origin, destination)
                 .stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
+                .map(this::toDto)
+                .toList();
     }
 
-    // Get trip by ID
-    public TripDTO getTripById(int id) {
-        Trip trip = tripRepo.findById(id)
-                .orElseThrow(() -> new NoSuchElementException("Trip not found with ID " + id));
-        return toDTO(trip);
-    }
-
-    // Get trips by user
-    public List<TripDTO> getTripsByUser(int userId) {
-        return tripRepo.findByUserId(userId)
-                .stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
-    }
-
-    // Create trip
     public TripDTO createTrip(Trip trip) {
-        Trip saved = tripRepo.save(trip);
-        return toDTO(saved);
+        User creator = userRepository.findById(trip.getUserId())
+                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
+
+        UserRole creatorRole = creator.getRole() == null ? UserRole.USER : creator.getRole();
+
+        if (creatorRole != UserRole.TRAVELLER && creatorRole != UserRole.ADMIN) {
+            throw new IllegalArgumentException("Only traveller or admin accounts can create trips");
+        }
+
+        return toDto(tripRepository.save(trip));
     }
 
-    // Update trip
-    public TripDTO updateTrip(int id, Trip tripDetails) {
-        Trip trip = tripRepo.findById(id)
-                .orElseThrow(() -> new NoSuchElementException("Trip not found with ID " + id));
-
-        trip.setUserId(tripDetails.getUserId());
-        trip.setPickupLocation(tripDetails.getPickupLocation());   // ✅ FIXED
-        trip.setDropLocation(tripDetails.getDropLocation());       // ✅ FIXED
-        trip.setCreatedAt(tripDetails.getCreatedAt());             // ✅ FIXED
-        trip.setTripStatus(tripDetails.getTripStatus());           // ✅ FIXED
-
-        Trip updated = tripRepo.save(trip);
-        return toDTO(updated);
+    public TripDTO getTripById(int tripId) {
+        Trip trip = tripRepository.findById(tripId)
+                .orElseThrow(() -> new ResourceNotFoundException("Trip not found"));
+        return toDto(trip);
     }
 
-    // Delete trip
-    public void deleteTrip(int id) {
-        Trip trip = tripRepo.findById(id)
-                .orElseThrow(() -> new NoSuchElementException("Trip not found with ID " + id));
-        tripRepo.delete(trip);
+    public List<TripDTO> getTripsByUser(int userId) {
+        return tripRepository.findByUserId(userId).stream().map(this::toDto).toList();
+    }
+
+    private TripDTO toDto(Trip trip) {
+        User owner = userRepository.findById(trip.getUserId())
+                .orElseThrow(() -> new ResourceNotFoundException("Trip owner not found"));
+
+        TripDTO dto = new TripDTO();
+        dto.setTripId(trip.getTripId());
+        dto.setUserId(trip.getUserId());
+        dto.setOrigin(trip.getOrigin());
+        dto.setPickupArea(trip.getPickupArea());
+        dto.setDestination(trip.getDestination());
+        dto.setDropArea(trip.getDropArea());
+        dto.setTravelDate(trip.getTravelDate());
+        dto.setCapacity(trip.getCapacity());
+        dto.setTripStatus(trip.getTripStatus());
+        dto.setCreatedAt(trip.getCreatedAt());
+        dto.setFare(trip.getFare());
+        dto.setOwnerName(owner.getUser_name());
+        dto.setOwnerEmail(owner.getEmail());
+        return dto;
     }
 }
